// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkLink should render correctly with "blank" and "rel" attributes 1`] = `
<a
  className="bpk-link"
  href="#"
  onClick={null}
  rel="rel-overwrite"
  target="_blank"
>
  Link (new window)
</a>
`;

exports[`BpkLink should render correctly with a "alternate" attribute 1`] = `
<a
  className="bpk-link bpk-link--alternate"
  href="#"
  onClick={null}
  rel={null}
  target={null}
>
  Link
</a>
`;

exports[`BpkLink should render correctly with a "blank" attribute 1`] = `
<a
  className="bpk-link"
  href="#"
  onClick={null}
  rel="noopener noreferrer"
  target="_blank"
>
  Link (new window)
</a>
`;

exports[`BpkLink should render correctly with a "className" attribute 1`] = `
<a
  className="bpk-link test-class"
  href="#"
  onClick={null}
  rel={null}
  target={null}
>
  Link
</a>
`;

exports[`BpkLink should render correctly with a "href" attribute 1`] = `
<a
  className="bpk-link"
  href="#"
  onClick={null}
  rel={null}
  target={null}
>
  Link
</a>
`;

exports[`BpkLink should render correctly with a "rel" attribute 1`] = `
<a
  className="bpk-link"
  href="#"
  onClick={null}
  rel="rel-attr"
  target="_blank"
>
  Link (new window)
</a>
`;

exports[`BpkLink should render correctly with a "white" attribute 1`] = `
<a
  className="bpk-link bpk-link--alternate"
  href="#"
  onClick={null}
  rel={null}
  target={null}
>
  Link
</a>
`;

exports[`BpkLink should render correctly with arbitrary attributes 1`] = `
<a
  className="bpk-link"
  href="#"
  id="test-id"
  onClick={null}
  rel={null}
  target={null}
>
  Link
</a>
`;
